[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/HUD.gd" type="Script" id=1]
[ext_resource path="res://FontAssets/FontSettings.tres" type="DynamicFont" id=2]

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ValueLable" type="Label" parent="."]
margin_left = 432.148
margin_top = 25.6709
margin_right = 523.148
margin_bottom = 60.6709
custom_fonts/font = ExtResource( 2 )
text = "Value:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timerlable" type="Label" parent="."]
margin_left = 429.769
margin_top = 63.7255
margin_right = 520.769
margin_bottom = 98.7255
custom_fonts/font = ExtResource( 2 )
text = "Time:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="."]
margin_left = 528.755
margin_top = 27.65
margin_right = 553.755
margin_bottom = 62.65
custom_fonts/font = ExtResource( 2 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Time" type="Label" parent="."]
margin_left = 531.134
margin_top = 63.3262
margin_right = 571.134
margin_bottom = 98.3262
custom_fonts/font = ExtResource( 2 )
text = "60"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
pause_mode = 1
autostart = true

[node name="RestartLable" type="Label" parent="."]
visible = false
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -19.5
margin_bottom = 19.5
custom_fonts/font = ExtResource( 2 )
text = "Press R to RESTART"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverLable" type="Label" parent="."]
visible = false
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -2.37842
margin_top = -74.2036
margin_right = -2.37842
margin_bottom = -35.2036
custom_fonts/font = ExtResource( 2 )
text = "GAME OVER"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pauselable" type="Label" parent="."]
visible = false
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -131.285
margin_bottom = -92.2855
custom_fonts/font = ExtResource( 2 )
text = "PAUSED"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="Signal_timeout" from="." to="." method="_on_HUD_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
